[refs #00091] Ensure Panel media stretches full-width
Previously, if Panels were wider than the media inside of them, the
media would not stretch. This left a purple highlight sitting over
nothing-in-particular. I’ve fixed this.

--- a/components/panel/_components.panel.scss
+++ b/components/panel/_components.panel.scss
@@ -43,6 +43,7 @@
      */
     .c-panel__media {
       opacity: 0.3;
+      width: 100%;
     }
 
     .c-panel__emblem {
